fixed image (again); twitter icon smaller when built

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -53,6 +53,7 @@ img.avatar
   border-radius: 4px
   float: left
   margin-right: 30px
+  height: 10em
   &:hover
   
     
